--- a/project/index.html
+++ b/project/index.html
@@ -1,1 +1,92 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>auto.hu</title>
+	<link href="https://fonts.googleapis.com/css?family=Titillium+Web:200" rel="stylesheet">
+	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+	<link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
+</head>
+<body>
+	<div class="w3-bar w3-white w3-xlarge" style="font-family: 'Titillium Web', sans-serif;">
+		<div class="w3-bar-item w3-btn" style="border-top: 2px solid; border-top-color: #fff">
+			AUTO.HU
+		</div>
+		<div class="w3-bar-item w3-btn" style="border-top: 2px solid; border-top-color: #000000">Home</div>
+		<div class="w3-bar-item w3-btn" style="border-top: 2px solid; border-top-color: #fff">Contacts</div>
+		<div class="w3-right">
+			<div class="w3-bar-item w3-btn"><a href="https://vk.com/Kurzdor"><i class="fa fa-vk" aria-hidden="true"></a></i></div>
+			<div class="w3-bar-item w3-btn"><a href="https://vk.com/Kurzdor"><i class="fa fa-facebook" aria-hidden="true"></a></i></div>
+			<div class="w3-bar-item w3-btn"><a href="https://vk.com/Kurzdor"><i class="fa fa-google-plus" aria-hidden="true"></a></i></div>
+		</div>
+	</div>
+	<div class="w3-image w3-center">
+		<img src="PNGPIX-COM-Techart-Porsche-Cayenne-White-Car-PNG-Image.png" alt="" style="margin-top: 5%; width: 70%; height: 70%">
+	</div>
+	<div class="w3-jumbo w3-center" style="font-family: 'Titillium Web', sans-serif; text-shadow:1px 2px 0 #3d3d3d">
+		BLOG ABOUT CARS
+	</div>
+	<div class="w3-center"><a href="#main"><img src="img/Arrow-down.svg" alt="" style="width: 3%; height: 3%"></a></div>
+	<div id="main">
+		<div class="w3-row" style="margin-top: 5%;">
+			<div class="w3-col l1" style="visibility: hidden;">
+				_
+			</div>
+			<div class="w3-col l7 w3-card w3-xxlarge">
+				<a href="audi" style="text-decoration: none;">
+					America, this is your Nissan GT-R Track Edition
+				<hr/>
+				<div class="w3-image w3-center">
+					<img src="img/2017-Audi-R8-5.2-V10-plus-6.jpg" alt="" style="width: 75%; height: 50%; margin-bottom: 3%">
+				</div>
+				<div class="w3-large" style="margin-left: 5%; margin-right: 5%;">
+					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+					Read more....
+				</div>
+				</a>
+			</div>
+			<div class="w3-col" style="visibility: hidden; width: 3%">
+				_
+			</div>
+			<div class="w3-col l2 w3-card w3-xxlarge">
+				Login
+				<hr/>
+				<div class="w3-large">
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+				</div>
+			</div>
+			<div class="w3-col l1" style="visibility: hidden;">
+				_
+			</div>
+		</div>
+	</div>
+</body>
+</html>
