--- a/project/index.html
+++ b/project/index.html
@@ -4,24 +4,26 @@
 	<meta charset="UTF-8">
 	<title>auto.hu</title>
 	<link href="https://fonts.googleapis.com/css?family=Titillium+Web:200" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
 	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 	<link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
+	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-	<div class="w3-bar w3-white w3-xlarge" style="font-family: 'Titillium Web', sans-serif;">
+	<div class="w3-bar w3-white w3-xlarge w3-top" style="font-family: 'Titillium Web', sans-serif;">
 		<div class="w3-bar-item w3-btn" style="border-top: 2px solid; border-top-color: #fff">
 			AUTO.HU
 		</div>
-		<div class="w3-bar-item w3-btn" style="border-top: 2px solid; border-top-color: #000000">Home</div>
-		<div class="w3-bar-item w3-btn" style="border-top: 2px solid; border-top-color: #fff">Contacts</div>
+		<div class="w3-bar-item w3-btn act">Home</div>
+		<div class="w3-bar-item w3-btn bd-t">Contacts</div>
 		<div class="w3-right">
-			<div class="w3-bar-item w3-btn"><a href="https://vk.com/Kurzdor"><i class="fa fa-vk" aria-hidden="true"></a></i></div>
-			<div class="w3-bar-item w3-btn"><a href="https://vk.com/Kurzdor"><i class="fa fa-facebook" aria-hidden="true"></a></i></div>
-			<div class="w3-bar-item w3-btn"><a href="https://vk.com/Kurzdor"><i class="fa fa-google-plus" aria-hidden="true"></a></i></div>
+			<div class="w3-bar-item w3-btn bd-t"><a href="https://vk.com/Kurzdor"><i class="fa fa-vk" aria-hidden="true"></a></i></div>
+			<div class="w3-bar-item w3-btn bd-t"><a href="https://vk.com/Kurzdor"><i class="fa fa-facebook" aria-hidden="true"></a></i></div>
+			<div class="w3-bar-item w3-btn bd-t"><a href="https://vk.com/Kurzdor"><i class="fa fa-google-plus" aria-hidden="true"></a></i></div>
 		</div>
 	</div>
 	<div class="w3-image w3-center">
-		<img src="PNGPIX-COM-Techart-Porsche-Cayenne-White-Car-PNG-Image.png" alt="" style="margin-top: 5%; width: 70%; height: 70%">
+		<img src="img/PNGPIX-COM-Techart-Porsche-Cayenne-White-Car-PNG-Image.png" alt="" style="margin-top: 5%; width: 70%; height: 70%">
 	</div>
 	<div class="w3-jumbo w3-center" style="font-family: 'Titillium Web', sans-serif; text-shadow:1px 2px 0 #3d3d3d">
 		BLOG ABOUT CARS
@@ -33,40 +35,19 @@
 				_
 			</div>
 			<div class="w3-col l7 w3-card w3-xxlarge">
-				<a href="audi" style="text-decoration: none;">
+				<div class="header" style="padding-top: 1.5%; padding-left: 2%; font-family: 'Titillium Web', sans-serif;">
 					America, this is your Nissan GT-R Track Edition
+				</div>
 				<hr/>
-				<div class="w3-image w3-center">
-					<img src="img/2017-Audi-R8-5.2-V10-plus-6.jpg" alt="" style="width: 75%; height: 50%; margin-bottom: 3%">
+				<div class="nissan w3-image w3-center">
+					<img src="img/2017_nissan_gt_r_track_edition_05.jpg" alt="" style="width: 75%; height: 50%; margin-bottom: 3%;">
 				</div>
-				<div class="w3-large" style="margin-left: 5%; margin-right: 5%;">
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-					Read more....
+				<div class="w3-large" style="margin-left: 5%; margin-right: 5%; font-family: 'PT Sans', sans-serif;">
+					At last year’s New York Auto Show, Nissan unveiled the most significant facelift of the R35 to date. With more power, new looks and a different interior, 2017’s Godzilla had a little more life injected into it thanks to a softer, more premium outlook. For this year’s New York Auto Show, Nissan has put the harshness back in, keeping the R35 alive even longer. Until an entirely new generation GT-R arrives… at some point in the future.
+					<a href="https://www.topgear.com/car-news/new-york-motor-show/america-your-nissan-gt-r-track-edition" style="color: white">_</a>
+					<br/>
+					<div class="w3-btn w3-right" style="font-family: 'Titillium Web', sans-serif; margin-bottom: 1%;">Read more <i class="fa fa-arrow-right" aria-hidden="true"></i></div>
 				</div>
-				</a>
 			</div>
 			<div class="w3-col" style="visibility: hidden; width: 3%">
 				_
@@ -86,6 +67,113 @@
 			<div class="w3-col l1" style="visibility: hidden;">
 				_
 			</div>
+		</div>
+	</div>
+	<div class="w3-row" style="margin-top: 1%;">
+			<div class="w3-col l1" style="visibility: hidden;">
+				_
+			</div>
+			<div class="w3-col l7 w3-card w3-xxlarge">
+				<div class="header" style="padding-top: 1.5%; padding-left: 2%; font-family: 'Titillium Web', sans-serif;">
+					America, this is your Nissan GT-R Track Edition
+				</div>
+				<hr/>
+				<div class="nissan w3-image w3-center">
+					<img src="img/2017_nissan_gt_r_track_edition_05.jpg" alt="" style="width: 75%; height: 50%; margin-bottom: 3%;">
+				</div>
+				<div class="w3-large" style="margin-left: 5%; margin-right: 5%; font-family: 'PT Sans', sans-serif;">
+					At last year’s New York Auto Show, Nissan unveiled the most significant facelift of the R35 to date. With more power, new looks and a different interior, 2017’s Godzilla had a little more life injected into it thanks to a softer, more premium outlook. For this year’s New York Auto Show, Nissan has put the harshness back in, keeping the R35 alive even longer. Until an entirely new generation GT-R arrives… at some point in the future.
+					<a href="https://www.topgear.com/car-news/new-york-motor-show/america-your-nissan-gt-r-track-edition" style="color: white">_</a>
+					<br/>
+					<div class="w3-btn w3-right" style="font-family: 'Titillium Web', sans-serif; margin-bottom: 1%;">Read more <i class="fa fa-arrow-right" aria-hidden="true"></i></div>
+				</div>
+			</div>
+	</div>
+		<div class="w3-row" style="margin-top: 1%;">
+			<div class="w3-col l1" style="visibility: hidden;">
+				_
+			</div>
+			<div class="w3-col l7 w3-card w3-xxlarge">
+				<div class="header" style="padding-top: 1.5%; padding-left: 2%; font-family: 'Titillium Web', sans-serif;">
+					America, this is your Nissan GT-R Track Edition
+				</div>
+				<hr/>
+				<div class="nissan w3-image w3-center">
+					<img src="img/2017_nissan_gt_r_track_edition_05.jpg" alt="" style="width: 75%; height: 50%; margin-bottom: 3%;">
+				</div>
+				<div class="w3-large" style="margin-left: 5%; margin-right: 5%; font-family: 'PT Sans', sans-serif;">
+					At last year’s New York Auto Show, Nissan unveiled the most significant facelift of the R35 to date. With more power, new looks and a different interior, 2017’s Godzilla had a little more life injected into it thanks to a softer, more premium outlook. For this year’s New York Auto Show, Nissan has put the harshness back in, keeping the R35 alive even longer. Until an entirely new generation GT-R arrives… at some point in the future.
+					<a href="https://www.topgear.com/car-news/new-york-motor-show/america-your-nissan-gt-r-track-edition" style="color: white">_</a>
+					<br/>
+					<div class="w3-btn w3-right" style="font-family: 'Titillium Web', sans-serif; margin-bottom: 1%;">Read more <i class="fa fa-arrow-right" aria-hidden="true"></i></div>
+				</div>
+			</div>
+	</div>
+		<div class="w3-row" style="margin-top: 1%;">
+			<div class="w3-col l1" style="visibility: hidden;">
+				_
+			</div>
+			<div class="w3-col l7 w3-card w3-xxlarge">
+				<div class="header" style="padding-top: 1.5%; padding-left: 2%; font-family: 'Titillium Web', sans-serif;">
+					America, this is your Nissan GT-R Track Edition
+				</div>
+				<hr/>
+				<div class="nissan w3-image w3-center">
+					<img src="img/2017_nissan_gt_r_track_edition_05.jpg" alt="" style="width: 75%; height: 50%; margin-bottom: 3%;">
+				</div>
+				<div class="w3-large" style="margin-left: 5%; margin-right: 5%; font-family: 'PT Sans', sans-serif;">
+					At last year’s New York Auto Show, Nissan unveiled the most significant facelift of the R35 to date. With more power, new looks and a different interior, 2017’s Godzilla had a little more life injected into it thanks to a softer, more premium outlook. For this year’s New York Auto Show, Nissan has put the harshness back in, keeping the R35 alive even longer. Until an entirely new generation GT-R arrives… at some point in the future.
+					<a href="https://www.topgear.com/car-news/new-york-motor-show/america-your-nissan-gt-r-track-edition" style="color: white">_</a>
+					<br/>
+					<div class="w3-btn w3-right" style="font-family: 'Titillium Web', sans-serif; margin-bottom: 1%;">Read more <i class="fa fa-arrow-right" aria-hidden="true"></i></div>
+				</div>
+			</div>
+	</div>
+	<div class="w3-row" style="margin-top: 1%; margin-bottom: 1%">
+		<div class="w3-col l1" style="visibility: hidden;">
+			_
+		</div>
+		<div class="w3-col l7 w3-card w3-xxlarge">
+			<div class="header" style="padding-top: 1.5%; padding-left: 2%; font-family: 'Titillium Web', sans-serif;">
+				America, this is your Nissan GT-R Track Edition
+			</div>
+			<hr/>
+			<div class="nissan w3-image w3-center">
+				<img src="img/2017_nissan_gt_r_track_edition_05.jpg" alt="" style="width: 75%; height: 50%; margin-bottom: 3%;">
+			</div>
+			<div class="w3-large" style="margin-left: 5%; margin-right: 5%; font-family: 'PT Sans', sans-serif;">
+				At last year’s New York Auto Show, Nissan unveiled the most significant facelift of the R35 to date. With more power, new looks and a different interior, 2017’s Godzilla had a little more life injected into it thanks to a softer, more premium outlook. For this year’s New York Auto Show, Nissan has put the harshness back in, keeping the R35 alive even longer. Until an entirely new generation GT-R arrives… at some point in the future.
+				<a href="https://www.topgear.com/car-news/new-york-motor-show/america-your-nissan-gt-r-track-edition" style="color: white">_</a>
+				<br/>
+				<div class="w3-btn w3-right" style="font-family: 'Titillium Web', sans-serif; margin-bottom: 1%;">Read more <i class="fa fa-arrow-right" aria-hidden="true"></i></div>
+			</div>
+		</div>
+	</div>
+	<div class="w3-row" style="margin-top: 1%; margin-bottom: 1%">
+		<div class="w3-col l1" style="visibility: hidden;">
+			_
+		</div>
+		<div class="w3-col l7">
+				<div class="w3-bar">
+					<div class="items w3-right">
+						<a href="#" class="w3-button">1</a>
+				  		<a href="#" class="w3-button">2</a>
+				  		<a href="#" class="w3-button">3</a>
+				  		<a href="#" class="w3-button">4</a>
+				  		<a href="#" class="w3-button">5</a>
+					</div>
+				</div>
+		</div>
+	</div>
+	<div class="w3-bar w3-card" style="font-family: 'Titillium Web', sans-serif;">
+		<div class="w3-center">
+		<div class="content">
+			Powered by w3.css
+			<br/>
+			<a href="https://vk.com/Kurzdor"><i class="fa fa-vk" aria-hidden="true"></a></i>
+			<a href="https://vk.com/Kurzdor"><i class="fa fa-facebook" aria-hidden="true"></a></i>
+			<a href="https://vk.com/Kurzdor"><i class="fa fa-google-plus" aria-hidden="true"></a></i>
+		</div> 
 		</div>
 	</div>
 </body>
