--- a/project/index.html
+++ b/project/index.html
@@ -28,21 +28,21 @@
 	<div class="w3-jumbo w3-center" style="font-family: 'Titillium Web', sans-serif; text-shadow:1px 2px 0 #3d3d3d">
 		BLOG ABOUT CARS
 	</div>
-	<div class="w3-center"><a href="#main"><img src="img/Arrow-down.svg" alt="" style="width: 3%; height: 3%"></a></div>
-	<div id="main">
-		<div class="w3-row" style="margin-top: 5%;">
-			<div class="w3-col l1" style="visibility: hidden;">
-				_
+	<div class="w3-center"><a href="#main"><img src="img/Arrow-down.svg" alt="" style="width: 3%; height: 3%;margin-bottom: 3%"></a></div>
+	<div id="main"></div>
+	<div class="w3-row" style="margin-top: 5%;">
+		<div class="w3-col l1" style="visibility: hidden;">
+			_
+		</div>
+		<div class="w3-col l7 w3-card w3-xxlarge">
+			<div class="header" style="padding-top: 1.5%; padding-left: 2%; font-family: 'Titillium Web',sans-serif;">					
+			America, this is your Nissan GT-R Track Edition
 			</div>
-			<div class="w3-col l7 w3-card w3-xxlarge">
-				<div class="header" style="padding-top: 1.5%; padding-left: 2%; font-family: 'Titillium Web', sans-serif;">
-					America, this is your Nissan GT-R Track Edition
-				</div>
-				<hr/>
-				<div class="nissan w3-image w3-center">
-					<img src="img/2017_nissan_gt_r_track_edition_05.jpg" alt="" style="width: 75%; height: 50%; margin-bottom: 3%;">
-				</div>
-				<div class="w3-large" style="margin-left: 5%; margin-right: 5%; font-family: 'PT Sans', sans-serif;">
+			<hr/>
+			<div class="auto w3-image w3-center">
+				<img src="img/2017_nissan_gt_r_track_edition_05.jpg" alt="" style="width: 75%; height: 50%; margin-bottom: 3%;">
+			</div>
+			<div class="w3-large" style="margin-left: 5%; margin-right: 5%; font-family: 'PT Sans', sans-serif;">
 					At last year’s New York Auto Show, Nissan unveiled the most significant facelift of the R35 to date. With more power, new looks and a different interior, 2017’s Godzilla had a little more life injected into it thanks to a softer, more premium outlook. For this year’s New York Auto Show, Nissan has put the harshness back in, keeping the R35 alive even longer. Until an entirely new generation GT-R arrives… at some point in the future.
 					<a href="https://www.topgear.com/car-news/new-york-motor-show/america-your-nissan-gt-r-track-edition" style="color: white">_</a>
 					<br/>
@@ -52,7 +52,7 @@
 			<div class="w3-col" style="visibility: hidden; width: 3%">
 				_
 			</div>
-			<div class="w3-col l2 w3-card w3-xxlarge">
+			<div class="w3-col l2 w3-card w3-xxlarge" style="padding-top: 1%; padding-left: 2%; font-family: 'Titillium Web',sans-serif;">
 				Login
 				<hr/>
 				<div class="w3-large">
@@ -69,16 +69,44 @@
 			</div>
 		</div>
 	</div>
+	<!-- Corvette -->
 	<div class="w3-row" style="margin-top: 1%;">
 			<div class="w3-col l1" style="visibility: hidden;">
 				_
 			</div>
 			<div class="w3-col l7 w3-card w3-xxlarge">
 				<div class="header" style="padding-top: 1.5%; padding-left: 2%; font-family: 'Titillium Web', sans-serif;">
+					This special edition Corvette has much carbon
+				</div>
+				<hr/>
+				<div class="auto w3-image w3-center">
+					<img src="img/corvette_2017.jpg" alt="" style="width: 75%; height: 50%; margin-bottom: 3%;">
+				</div>
+				<div class="w3-large" style="margin-left: 5%; margin-right: 5%; font-family: 'PT Sans', sans-serif;">
+					65 years old you say?
+Yep. The Corvette is 65 years old, which means it’s about time Chevrolet gave us another special edition. So it’s called the Corvette Carbon 65, erm, Edition, and as its name would have you believe, it does indeed feature much carbon.
+
+The “ground effects” are the most obvious bits – the spoiler, diffuser, side skirts and so-on. The $15,000 option package, which comes out this summer and can be specified on Grandsports and Z06s, also features a carbon roof (on Coupes), carbon steering-wheel and gloss carbon interior trim. 
+
+Non-carbon additions include special seats, special graphics, “Ceramic Matrix Gray” (or “grey”, if you’re a Brit and therefore spell things correctly) paintwork and blue brake calipers. No performance enhancements, but take it from us – the Z06 especially is fast enough as it is.
+
+But what about its predecessors? Have a flick through our little gallery for a quick, Corvette-based history lesson…
+					<a href="https://www.topgear.com/car-news/new-york-motor-show/america-your-nissan-gt-r-track-edition" style="color: white">_</a>
+					<br/>
+					<div class="w3-btn w3-right" style="font-family: 'Titillium Web', sans-serif; margin-bottom: 1%;">Read more <i class="fa fa-arrow-right" aria-hidden="true"></i></div>
+				</div>
+			</div>
+	</div>
+		<div class="w3-row" style="margin-top: 1%;">
+			<div class="w3-col l1" style="visibility: hidden;">
+				_
+			</div>
+			<div class="w3-col l7 w3-card w3-xxlarge">
+				<div class="header" style="padding-top: 1.5%; padding-left: 2%; font-family: 'Titillium Web', sans-serif;">
 					America, this is your Nissan GT-R Track Edition
 				</div>
 				<hr/>
-				<div class="nissan w3-image w3-center">
+				<div class="auto w3-image w3-center">
 					<img src="img/2017_nissan_gt_r_track_edition_05.jpg" alt="" style="width: 75%; height: 50%; margin-bottom: 3%;">
 				</div>
 				<div class="w3-large" style="margin-left: 5%; margin-right: 5%; font-family: 'PT Sans', sans-serif;">
@@ -98,27 +126,7 @@
 					America, this is your Nissan GT-R Track Edition
 				</div>
 				<hr/>
-				<div class="nissan w3-image w3-center">
-					<img src="img/2017_nissan_gt_r_track_edition_05.jpg" alt="" style="width: 75%; height: 50%; margin-bottom: 3%;">
-				</div>
-				<div class="w3-large" style="margin-left: 5%; margin-right: 5%; font-family: 'PT Sans', sans-serif;">
-					At last year’s New York Auto Show, Nissan unveiled the most significant facelift of the R35 to date. With more power, new looks and a different interior, 2017’s Godzilla had a little more life injected into it thanks to a softer, more premium outlook. For this year’s New York Auto Show, Nissan has put the harshness back in, keeping the R35 alive even longer. Until an entirely new generation GT-R arrives… at some point in the future.
-					<a href="https://www.topgear.com/car-news/new-york-motor-show/america-your-nissan-gt-r-track-edition" style="color: white">_</a>
-					<br/>
-					<div class="w3-btn w3-right" style="font-family: 'Titillium Web', sans-serif; margin-bottom: 1%;">Read more <i class="fa fa-arrow-right" aria-hidden="true"></i></div>
-				</div>
-			</div>
-	</div>
-		<div class="w3-row" style="margin-top: 1%;">
-			<div class="w3-col l1" style="visibility: hidden;">
-				_
-			</div>
-			<div class="w3-col l7 w3-card w3-xxlarge">
-				<div class="header" style="padding-top: 1.5%; padding-left: 2%; font-family: 'Titillium Web', sans-serif;">
-					America, this is your Nissan GT-R Track Edition
-				</div>
-				<hr/>
-				<div class="nissan w3-image w3-center">
+				<div class="auto w3-image w3-center">
 					<img src="img/2017_nissan_gt_r_track_edition_05.jpg" alt="" style="width: 75%; height: 50%; margin-bottom: 3%;">
 				</div>
 				<div class="w3-large" style="margin-left: 5%; margin-right: 5%; font-family: 'PT Sans', sans-serif;">
@@ -138,7 +146,7 @@
 				America, this is your Nissan GT-R Track Edition
 			</div>
 			<hr/>
-			<div class="nissan w3-image w3-center">
+			<div class="auto w3-image w3-center">
 				<img src="img/2017_nissan_gt_r_track_edition_05.jpg" alt="" style="width: 75%; height: 50%; margin-bottom: 3%;">
 			</div>
 			<div class="w3-large" style="margin-left: 5%; margin-right: 5%; font-family: 'PT Sans', sans-serif;">
