--- a/index.html
+++ b/index.html
@@ -9,21 +9,18 @@
 </head>
 <body data-vide-bg="video/bg" style="height: 100%">
 
-	<div class="kurzdor w3-center" style="font-family: Venetian; padding-top: 14.25%; font-size: 10em;">
-		Kurzdor
+	<div class="w3-center w3-animate-top" style="font-family: Venetian; padding-top: 14.25%; font-size: 10em;">
+		<div class="kurzdor">Kurzdor</div>
 	</div>
 	
 	<div class="w3-row" style="padding-top: 5%; padding-bottom: 13.75%">
-		<div class="w3-col l3 w3-hide-small">_</div>
-		<div class="w3-col l3 w3-btn w3-text-white" style="font-size: 2.5em; font-family: 'Roboto Condensed', sans-serif;"><a href="main/index.html" style="text-decoration: none;">Move to Main</a></div>
-
-		<div class="w3-col l3 w3-btn w3-text-white" style="font-size: 2.5em; font-family: 'Roboto Condensed', sans-serif;"><a href="project/index.html" style="text-decoration: none;">Move to Project</a></div>
-		<div class="w3-col l3 w3-hide-small">_</div>
+		<div class="w3-col l3 w3-hide-small" style="visibility: hidden;">_</div>
+		<div class="w3-col l3 w3-btn w3-text-white w3-animate-top" style="font-size: 2.5em; font-family: 'Roboto Condensed', sans-serif;"><a href="main/index.html" style="text-decoration: none;">Move to Main</a></div>
+		<div class="w3-col l3 w3-btn w3-text-white w3-animate-top" style="font-size: 2.5em; font-family: 'Roboto Condensed', sans-serif;"><a href="project/index.html" style="text-decoration: none;">Move to Project</a></div>
+		<div class="w3-col l3 w3-hide-small" style="visibility: hidden;">_</div>
 	</div>
-
 	<div class="w3-container w3-center w3-text-white" style="font-family: 'Roboto Condensed', sans-serif; font-size: 1.1em;"><a href="https://www.w3schools.com/w3css/default.asp" style="text-decoration: none;">Powered by w3.css</a></div>
 	<div class="w3-container w3-center w3-text-white" style="font-family: 'Roboto Condensed', sans-serif; font-size: 1.1em;">Made by Kurzdor</div>
-
 	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
