--- a/project/index.html
+++ b/project/index.html
@@ -172,7 +172,7 @@
 					<label>Username</label>
 					<input class="w3-input w3-border w3-margin-bottom w3-margin-right" type="text" placeholder="Enter Username" name="usrname" required="" style="width: 90%">
 					<label>Password</label>
-					<input class="w3-input w3-border w3-margin-bottom w3-margin-right" type="password" placeholder="Your password" name="password" required="" style="width: 90%">
+					<input class="w3-input w3-border w3-margin-bottom w3-margin-right" type="password" placeholder="Enter password" name="password" required="" style="width: 90%">
 					<div class="w3-btn w3-margin-bottom"><i class="fa fa-sign-in" aria-hidden="true" style="margin-right: 10%"></i>Login</div>
 				</div>
 			</div>
