--- a/project/index.html
+++ b/project/index.html
@@ -45,10 +45,12 @@
 				<img src="img/2017_nissan_gt_r_track_edition_05.jpg" alt="" style="width: 75%; height: 50%; margin-bottom: 3%;">
 			</div>
 			<div class="w3-large" style="margin-left: 5%; margin-right: 5%; font-family: 'PT Sans', sans-serif;">
-					At last year’s New York Auto Show, Nissan unveiled the most significant facelift of the R35 to date. With more power, new looks and a different interior, 2017’s Godzilla had a little more life injected into it thanks to a softer, more premium outlook. For this year’s New York Auto Show, Nissan has put the harshness back in, keeping the R35 alive even longer. Until an entirely new generation GT-R arrives… at some point in the future.
+					<b>At last year’s New York Auto Show, Nissan unveiled the most significant facelift of the R35 to date.</b>
+					<br/>
+					With more power, new looks and a different interior, 2017’s Godzilla had a little more life injected into it thanks to a softer, more premium outlook. For this year’s New York Auto Show, Nissan has put the harshness back in, keeping the R35 alive even longer. Until an entirely new generation GT-R arrives… at some point in the future.
 					<a href="https://www.topgear.com/car-news/new-york-motor-show/america-your-nissan-gt-r-track-edition" style="color: white">_</a>
 					<br/>
-					<div class="w3-btn w3-right" style="font-family: 'Titillium Web', sans-serif; margin-bottom: 1%;">Read more <i class="fa fa-arrow-right" aria-hidden="true"></i></div>
+					<div class="w3-btn w3-right" style="font-family: 'Titillium Web', sans-serif; margin-bottom: 1%;"><a href="nissangtr.html">Read more <i class="fa fa-arrow-right" aria-hidden="true"></i></a></div>
 				</div>
 			</div>
 			<div class="w3-col" style="visibility: hidden; width: 3%">
@@ -85,7 +87,8 @@
 					<img src="img/corvette_2017.jpg" alt="" style="width: 75%; height: 50%; margin-bottom: 3%;">
 				</div>
 				<div class="w3-large" style="margin-left: 5%; margin-right: 5%; font-family: 'PT Sans', sans-serif;">
-					65 years old you say?
+					<b>65 years old you say?</b>
+					<br/>
 					Yep. The Corvette is 65 years old, which means it’s about time Chevrolet gave us another special edition. So it’s called the Corvette Carbon 65, erm, Edition, and as its name would have you believe, it does indeed feature much carbon.
 					The “ground effects” are the most obvious bits – the spoiler, diffuser, side skirts and so-on. The $15,000 option package, which comes out this summer and can be specified on Grandsports and Z06s, also features a carbon roof (on Coupes), carbon steering-wheel and gloss carbon interior trim.
 					Non-carbon additions include special seats, special graphics, “Ceramic Matrix Gray” (or “grey”, if you’re a Brit and therefore spell things correctly) paintwork and blue brake calipers. No performance enhancements, but take it from us – the Z06 especially is fast enough as it is.
@@ -109,7 +112,9 @@
 					<img src="img/q8_sport_concept_3.jpg" alt="" style="width: 75%; height: 50%; margin-bottom: 3%;">
 				</div>
 				<div class="w3-large" style="margin-left: 5%; margin-right: 5%; font-family: 'PT Sans', sans-serif;">
-					We joke often of Audi’s ability to fill a niche. Or, indeed, create a new one all of its own.
+					<b>We joke often of Audi’s ability to fill a niche.</b>
+					<br/>
+					Or, indeed, create a new one all of its own.
 					Well, its spotted some numbers yet to be prefixed by a Q and, well, prefixed away. So there’ll be a large Q8 SUV next year, and a smaller Q4 in 2019.
 					We’ve long suspected both will exist, mind, and the Q8 has been previewed recently by this very fetching concept car (pictured above). Yep, the slightly safe Audi styling of old is being binned for something far bolder. Hurrah!
 					Described as a “premium SUV in a coupe style”, the Q8 will roll off the same Bratislava production line as the really quite good SQ7. We suspect an SQ8 might be a guilty pleasure of the highest order.
@@ -132,7 +137,8 @@
 					<img src="img/1_1_1.jpg" alt="" style="width: 75%; height: 50%; margin-bottom: 3%;">
 				</div>
 				<div class="w3-large" style="margin-left: 5%; margin-right: 5%; font-family: 'PT Sans', sans-serif;">
-					We should probably preface this story with the fact that none of the images you are about to see are real, official, or in any way legitimate.
+					<b>We should probably preface this story with the fact that none of the images you are about to see are real, official, or in any way legitimate.</b>
+					<br/>
 					They are however, images. Images of an idea held by TG’s good friend Alex Imnadze; a chap who’s a dab hand at rendering quite wonderful cars using witchcraft levels of Photoshoppery.
 					Today’s not-real sketch comes via Touring Superleggera’s quite wonderful Disco Volante, and Alfa Romeo’s very own 6C. Using both of these lovely automobiles as inspiration, Alex has put himself in the mind of an Alfa Romeo designer, were said designer be tasked with sketching out a mad, exquisite Alfa Romeo supercar.
 					<a href="https://www.topgear.com/car-news/supercars/mad-alfa-romeo-concept-supercar-we-need-right-now#1" style="color: white">_</a>
@@ -154,7 +160,9 @@
 				<img src="img/lumma-range-rover-velar2.jpg" alt="" style="width: 75%; height: 50%; margin-bottom: 3%;">
 			</div>
 			<div class="w3-large" style="margin-left: 5%; margin-right: 5%; font-family: 'PT Sans', sans-serif;">
-				It was inevitable, wasn’t it? Given the Range Rover has been the darling of car tuners for years, it was only a matter of time before some of them got their overly creative mitts on the new Range Rover Velar.
+				<b>It was inevitable, wasn’t it?</b>
+				<br/> 
+				Given the Range Rover has been the darling of car tuners for years, it was only a matter of time before some of them got their overly creative mitts on the new Range Rover Velar.
 				This is the first, and it’s the work of Lumma Design. As its Jaguar F-Pace and Bentley Bentayga prove only too well, Lumma loves an SUV. But only when it’s been given the wheels the size of a covered wagon’s and extended arches that would make a short-wheelbase Audi Quattro blush.
 				And if you thought ‘Range Rover Velar’ was a minor mouthful, then prepare yourself for the Lumma CLR GT Limited Edition. The body kit is best described as ‘strong’, with wildly swelled wheel arches, side sills you can almost step on and an actual carbon rear spoiler. Oh, and a rear diffuser that looks like a grumpy mouth.
 				<a href="https://www.topgear.com/car-news/modified/yikes-someones-tuned-range-rover-velar-already" style="color: white">_</a>
