--- a/project/index2.html
+++ b/project/index2.html
@@ -38,15 +38,19 @@
 		</div>
 		<div class="w3-col l7 w3-card w3-xxlarge">
 			<div class="header" style="padding-top: 1.5%; padding-left: 2%; font-family: 'Titillium Web',sans-serif;">
-			America, this is your Nissan GT-R Track Edition
+				There's a new large Citroen SUV coming
 			</div>
 			<hr/>
 			<div class="auto w3-image w3-center">
-				<img src="img/2017_nissan_gt_r_track_edition_05.jpg" alt="" style="width: 75%; height: 50%; margin-bottom: 3%;">
+				<img src="img/8095.jpg" alt="" style="width: 75%; height: 50%; margin-bottom: 3%;">
 			</div>
 			<div class="w3-large" style="margin-left: 5%; margin-right: 5%; font-family: 'PT Sans', sans-serif;">
-					At last year’s New York Auto Show, Nissan unveiled the most significant facelift of the R35 to date. With more power, new looks and a different interior, 2017’s Godzilla had a little more life injected into it thanks to a softer, more premium outlook. For this year’s New York Auto Show, Nissan has put the harshness back in, keeping the R35 alive even longer. Until an entirely new generation GT-R arrives… at some point in the future.
-					<a href="https://www.topgear.com/car-news/new-york-motor-show/america-your-nissan-gt-r-track-edition" style="color: white">_</a>
+					<b>This, boys and girls, is the Citroen C5 Aircross.</b>
+					<br/>
+					Well, a drawing of it, at least.
+					The car itself will be on show at next week’s Shanghai motor show, and it’s the latest model in something Citroen calls its ‘SUV offensive’.
+					So it’s bigger than the forthcoming C3 crossover (previewed at the Geneva motor show), and it’ll launch in China initially, before European sales begin at the end of 2018.
+					<a href="https://www.topgear.com/car-news/suvs/theres-new-large-citroen-suv-coming" style="color: white">_</a>
 					<br/>
 					<div class="w3-btn w3-right" style="font-family: 'Titillium Web', sans-serif; margin-bottom: 1%;">Read more <i class="fa fa-arrow-right" aria-hidden="true"></i></div>
 				</div>
@@ -78,23 +82,48 @@
 			</div>
 			<div class="w3-col l7 w3-card w3-xxlarge">
 				<div class="header" style="padding-top: 1.5%; padding-left: 2%; font-family: 'Titillium Web', sans-serif;">
-					This special edition Corvette has much carbon
+					Oh yes, Audi has built a hardcore R8 GT4
 				</div>
 				<hr/>
 				<div class="auto w3-image w3-center">
-					<img src="img/corvette_2017.jpg" alt="" style="width: 75%; height: 50%; margin-bottom: 3%;">
+					<img src="img/a172723_large.jpg" alt="" style="width: 75%; height: 50%; margin-bottom: 3%;">
 				</div>
 				<div class="w3-large" style="margin-left: 5%; margin-right: 5%; font-family: 'PT Sans', sans-serif;">
-					65 years old you say?
-					Yep. The Corvette is 65 years old, which means it’s about time Chevrolet gave us another special edition. So it’s called the Corvette Carbon 65, erm, Edition, and as its name would have you believe, it does indeed feature much carbon.
-					The “ground effects” are the most obvious bits – the spoiler, diffuser, side skirts and so-on. The $15,000 option package, which comes out this summer and can be specified on Grandsports and Z06s, also features a carbon roof (on Coupes), carbon steering-wheel and gloss carbon interior trim.
-					Non-carbon additions include special seats, special graphics, “Ceramic Matrix Gray” (or “grey”, if you’re a Brit and therefore spell things correctly) paintwork and blue brake calipers. No performance enhancements, but take it from us – the Z06 especially is fast enough as it is.
-					But what about its predecessors? Have a flick through our little gallery for a quick, Corvette-based history lesson…
-					<a href="https://www.topgear.com/car-news/new-york-motor-show/special-edition-corvette-has-much-carbon#1" style="color: white">_</a>
+					<b>A hardcore Audi R8? God yes.</b>
+					<br/>
+					Hold your horses. This is no competitor for the Porsche 911 GT3, Mercedes AMG GT R or BMW M4 GTS. Audi says the R8 LMS GT4 is the “ideal race car for amateur campaigners” – a non-road-legal, off-the-shelf race car - like the Porsche Cayman GT4 Clubsport - which will be eligible for series like the British GT Championship and one-offs like the Nürburgring 24hrs.
+					<a href="https://www.topgear.com/car-news/new-york-motor-show/oh-yes-audi-has-built-hardcore-r8-gt4#17" style="color: white">_</a>
 					<br/>
 					<div class="w3-btn w3-right" style="font-family: 'Titillium Web', sans-serif; margin-bottom: 1%;">Read more <i class="fa fa-arrow-right" aria-hidden="true"></i></div>
 				</div>
 			</div>
+	</div>
+	<div class="w3-row" style="margin-top: 1%;">
+		<div class="w3-col l1" style="visibility: hidden;">
+			_
+		</div>
+		<div class="w3-col l7 w3-card w3-xxlarge">
+			<div class="header" style="padding-top: 1.5%; padding-left: 2%; font-family: 'Titillium Web', sans-serif;">
+				This is a Nissan Rogue with TRACKS
+			</div>
+			<hr/>
+			<div class="auto w3-image w3-center">
+				<img src="img/nissan_rogue_trail_warrior_project_2.jpg" alt="" style="width: 75%; height: 50%; margin-bottom: 3%;">
+			</div>
+			<div class="w3-large" style="margin-left: 5%; margin-right: 5%; font-family: 'PT Sans', sans-serif;">
+				<b>Nissan fits tracks to American X-Trail.</b>
+				<br/>
+				Because reasons:
+				<br/>
+				That’s what’s been stopping me from buying a Rogue. A lack of tracks.
+				<br>
+				Indeed, The problem with the Nissan Rogue (X-Trail over here) has long been that it doesn’t come with snow and sand tracks. In its infinite wisdom, Nissan has solved the problem with this: the Rogue Trail Warrior Project. Never let it be said it doesn’t listen to its customers.
+				<a href="https://www.topgear.com/car-news/new-york-motor-show/nissan-rogue-tracks#1" style="color: white">_</a>
+				<br/>
+				<div class="w3-btn w3-right" style="font-family: 'Titillium Web', sans-serif; margin-bottom: 1%;">Read more <i class="fa fa-arrow-right" aria-hidden="true"></i></div>
+			</div>
+		</div>
+	</div>	
 	</div>
 		<div class="w3-row" style="margin-top: 1%;">
 			<div class="w3-col l1" style="visibility: hidden;">
@@ -102,40 +131,18 @@
 			</div>
 			<div class="w3-col l7 w3-card w3-xxlarge">
 				<div class="header" style="padding-top: 1.5%; padding-left: 2%; font-family: 'Titillium Web', sans-serif;">
-					Hold onto your trendy hats, more Audi Q SUVs are coming
+					This is a Red Arrows-spec Aston Martin Vanquish S
 				</div>
 				<hr/>
 				<div class="auto w3-image w3-center">
-					<img src="img/q8_sport_concept_3.jpg" alt="" style="width: 75%; height: 50%; margin-bottom: 3%;">
+					<img src="img/q-by-aston-martin_vanquish-s-red-arrows-edition_03.jpg" alt="" style="width: 75%; height: 50%; margin-bottom: 3%;">
 				</div>
 				<div class="w3-large" style="margin-left: 5%; margin-right: 5%; font-family: 'PT Sans', sans-serif;">
-					We joke often of Audi’s ability to fill a niche. Or, indeed, create a new one all of its own.
-					Well, its spotted some numbers yet to be prefixed by a Q and, well, prefixed away. So there’ll be a large Q8 SUV next year, and a smaller Q4 in 2019.
-					We’ve long suspected both will exist, mind, and the Q8 has been previewed recently by this very fetching concept car (pictured above). Yep, the slightly safe Audi styling of old is being binned for something far bolder. Hurrah!
-					Described as a “premium SUV in a coupe style”, the Q8 will roll off the same Bratislava production line as the really quite good SQ7. We suspect an SQ8 might be a guilty pleasure of the highest order.
-					<a href="https://www.topgear.com/car-news/hold-your-trendy-hats-more-audi-q-suvs-are-coming" style="color: white">_</a>
-					<br/>
-					<div class="w3-btn w3-right" style="font-family: 'Titillium Web', sans-serif; margin-bottom: 1%;">Read more <i class="fa fa-arrow-right" aria-hidden="true"></i></div>
-				</div>
-			</div>
-	</div>
-		<div class="w3-row" style="margin-top: 1%;">
-			<div class="w3-col l1" style="visibility: hidden;">
-				_
-			</div>
-			<div class="w3-col l7 w3-card w3-xxlarge">
-				<div class="header" style="padding-top: 1.5%; padding-left: 2%; font-family: 'Titillium Web', sans-serif;">
-					This mad Alfa Romeo concept is the supercar we need right now
-				</div>
-				<hr/>
-				<div class="auto w3-image w3-center">
-					<img src="img/1_1_1.jpg" alt="" style="width: 75%; height: 50%; margin-bottom: 3%;">
-				</div>
-				<div class="w3-large" style="margin-left: 5%; margin-right: 5%; font-family: 'PT Sans', sans-serif;">
-					We should probably preface this story with the fact that none of the images you are about to see are real, official, or in any way legitimate.
-					They are however, images. Images of an idea held by TG’s good friend Alex Imnadze; a chap who’s a dab hand at rendering quite wonderful cars using witchcraft levels of Photoshoppery.
-					Today’s not-real sketch comes via Touring Superleggera’s quite wonderful Disco Volante, and Alfa Romeo’s very own 6C. Using both of these lovely automobiles as inspiration, Alex has put himself in the mind of an Alfa Romeo designer, were said designer be tasked with sketching out a mad, exquisite Alfa Romeo supercar.
-					<a href="https://www.topgear.com/car-news/supercars/mad-alfa-romeo-concept-supercar-we-need-right-now#1" style="color: white">_</a>
+					<b>Meet the very best of British.</b>
+					<br/> 
+					Or, in other words, the Q by Aston Martin Vanquish S Red Arrows Edition. The ‘want’ is strong with this one.
+					The Red Arrows, for any of you who’ve never spent a day getting sun-burned on a military airfield watching the world’s most illustrious aerobatics display team defy gravity, death and quite a lot of noise regulations, is the Royal Air Force’s nine-strong team of super-pilots. Since 1965, they’ve been executing daring close-quarters stunts and high-speed passes at events like the British Grand Prix, the Queen’s Diamond Jubilee, and Mick Jagger’s birthday party (probably) tracing red, white and blue smoke into improbable shapes over the English countryside.
+					<a href="https://www.topgear.com/car-news/bond-cars/red-arrows-spec-aston-martin-vanquish-s" style="color: white">_</a>
 					<br/>
 					<div class="w3-btn w3-right" style="font-family: 'Titillium Web', sans-serif; margin-bottom: 1%;">Read more <i class="fa fa-arrow-right" aria-hidden="true"></i></div>
 				</div>
@@ -147,17 +154,18 @@
 		</div>
 		<div class="w3-col l7 w3-card w3-xxlarge">
 			<div class="header" style="padding-top: 1.5%; padding-left: 2%; font-family: 'Titillium Web', sans-serif;">
-				Yikes, someone's tuned a Range Rover Velar already
+				Mercedes-AMG GT R review: ultimate 577bhp AMG driven in the UK
 			</div>
 			<hr/>
 			<div class="auto w3-image w3-center">
-				<img src="img/lumma-range-rover-velar2.jpg" alt="" style="width: 75%; height: 50%; margin-bottom: 3%;">
+				<img src="img/01tgamgtr.jpg" alt="" style="width: 75%; height: 50%; margin-bottom: 3%;">
 			</div>
 			<div class="w3-large" style="margin-left: 5%; margin-right: 5%; font-family: 'PT Sans', sans-serif;">
-				It was inevitable, wasn’t it? Given the Range Rover has been the darling of car tuners for years, it was only a matter of time before some of them got their overly creative mitts on the new Range Rover Velar.
-				This is the first, and it’s the work of Lumma Design. As its Jaguar F-Pace and Bentley Bentayga prove only too well, Lumma loves an SUV. But only when it’s been given the wheels the size of a covered wagon’s and extended arches that would make a short-wheelbase Audi Quattro blush.
-				And if you thought ‘Range Rover Velar’ was a minor mouthful, then prepare yourself for the Lumma CLR GT Limited Edition. The body kit is best described as ‘strong’, with wildly swelled wheel arches, side sills you can almost step on and an actual carbon rear spoiler. Oh, and a rear diffuser that looks like a grumpy mouth.
-				<a href="https://www.topgear.com/car-news/modified/yikes-someones-tuned-range-rover-velar-already" style="color: white">_</a>
+				<b>Time to review the Mercedes-AMG GT R again?</b>
+				<br/>
+				Not that we need an excuse, but yes, after a stellar debut in Portugal we’ve got the 577bhp, £142,000 GT R all to ourselves in Britain, which is where the standard GT S largely came unstuck.
+				Quite literally. Too wide, impossible to see out of, uncomfortably jarring, and snatchy when the throttle was tickled. Less an everyday Porsche 911 rival, more a Dodge Hellcat with the steering wheel on the correct side.
+				<a href="https://www.topgear.com/car-reviews/mercedes-benz/amg-gt/gt-r-2dr-auto/first-drive-0" style="color: white">_</a>
 				<br/>
 				<div class="w3-btn w3-right" style="font-family: 'Titillium Web', sans-serif; margin-bottom: 1%;">Read more <i class="fa fa-arrow-right" aria-hidden="true"></i></div>
 			</div>
