--- a/project/index3.html
+++ b/project/index3.html
@@ -134,7 +134,7 @@
 				</div>
 				<hr/>
 				<div class="auto w3-image w3-center">
-					<img src="img/_dsc8577.jpg" alt="" style="width: 75%; height: 50%; margin-bottom: 3%;">
+					<img src="img/dsc8577.jpg" alt="" style="width: 75%; height: 50%; margin-bottom: 3%;">
 				</div>
 				<div class="w3-large" style="margin-left: 5%; margin-right: 5%; font-family: 'PT Sans', sans-serif;">
 					<b>Marvel at the sight of much horsepower and expense in Switzerland</b>
