--- a/project/index.html
+++ b/project/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="theme-color" content="#f0f0f0">
-	<title>auto.hu</title>
+	<title>Home - auto.hu</title>
 	<link rel="icon" href="favicon.png">
 	<link href="https://fonts.googleapis.com/css?family=Titillium+Web:200" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
@@ -50,7 +50,7 @@
 					With more power, new looks and a different interior, 2017’s Godzilla had a little more life injected into it thanks to a softer, more premium outlook. For this year’s New York Auto Show, Nissan has put the harshness back in, keeping the R35 alive even longer. Until an entirely new generation GT-R arrives… at some point in the future.
 					<a href="https://www.topgear.com/car-news/new-york-motor-show/america-your-nissan-gt-r-track-edition" style="color: white">_</a>
 					<br/>
-					<div class="w3-btn w3-right" style="font-family: 'Titillium Web', sans-serif; margin-bottom: 1%;"><a href="nissangtr.html">Read more <i class="fa fa-arrow-right" aria-hidden="true"></i></a></div>
+					<div class="w3-btn w3-right" style="font-family: 'Titillium Web', sans-serif; margin-bottom: 1%;"><a href="nissan1.html">Read more <i class="fa fa-arrow-right" aria-hidden="true"></i></a></div>
 				</div>
 			</div>
 			<div class="w3-col" style="visibility: hidden; width: 3%">
@@ -87,7 +87,7 @@
 					<img src="img/corvette_2017.jpg" alt="" style="width: 75%; height: 50%; margin-bottom: 3%;">
 				</div>
 				<div class="w3-large" style="margin-left: 5%; margin-right: 5%; font-family: 'PT Sans', sans-serif;">
-					<b>65 years old you say?</b>
+					<b>It's 65 years of the Corvette. 65 years old you say?</b>
 					<br/>
 					Yep. The Corvette is 65 years old, which means it’s about time Chevrolet gave us another special edition. So it’s called the Corvette Carbon 65, erm, Edition, and as its name would have you believe, it does indeed feature much carbon.
 					The “ground effects” are the most obvious bits – the spoiler, diffuser, side skirts and so-on. The $15,000 option package, which comes out this summer and can be specified on Grandsports and Z06s, also features a carbon roof (on Coupes), carbon steering-wheel and gloss carbon interior trim.
@@ -95,7 +95,7 @@
 					But what about its predecessors? Have a flick through our little gallery for a quick, Corvette-based history lesson…
 					<a href="https://www.topgear.com/car-news/new-york-motor-show/special-edition-corvette-has-much-carbon#1" style="color: white">_</a>
 					<br/>
-					<div class="w3-btn w3-right" style="font-family: 'Titillium Web', sans-serif; margin-bottom: 1%;">Read more <i class="fa fa-arrow-right" aria-hidden="true"></i></div>
+					<div class="w3-btn w3-right" style="font-family: 'Titillium Web', sans-serif; margin-bottom: 1%;"><a href="corvette.html">Read more <i class="fa fa-arrow-right" aria-hidden="true"></i></a></div>
 				</div>
 			</div>
 	</div>
