UPDATE + STARTED REBUILDING HEADER

--- a/project/3/index.html
+++ b/project/3/index.html
@@ -1,20 +1,20 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
 	<meta name="theme-color" content="#000000">
-	<title>Home - auto.hu</title>
-	<link rel="icon" href="favicon.png">
+	<title>auto.hu</title>
+	<link rel="icon" href="../favicon.png">
 	<link href="https://fonts.googleapis.com/css?family=Titillium+Web:200" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
 	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-	<link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="../font-awesome-4.7.0/css/font-awesome.min.css">
+	<link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
 	<div class="w3-bar w3-white w3-xlarge w3-top" style="font-family: 'Titillium Web', sans-serif;">
 		<div class="w3-bar-item w3-btn" style="border-top: 2px solid; border-top-color: #fff">
-			<a href="index.html">AUTO.HU</a>
+			<a href="../index.html">AUTO.HU</a>
 		</div>
 		<div class="w3-bar-item w3-btn act">Home</div>
 		<div class="w3-bar-item w3-btn bd-t">Contacts</div>
@@ -25,12 +25,12 @@
 		</div>
 	</div>
 	<div class="w3-image w3-center">
-		<img src="img/PNGPIX-COM-Techart-Porsche-Cayenne-White-Car-PNG-Image.png" alt="" style="margin-top: 5%; width: 70%; height: 70%">
+		<img src="../img/PNGPIX-COM-Techart-Porsche-Cayenne-White-Car-PNG-Image.png" alt="" style="margin-top: 5%; width: 70%; height: 70%">
 	</div>
 	<div class="w3-jumbo w3-center" style="font-family: 'Titillium Web', sans-serif; text-shadow:1px 2px 0 #3d3d3d">
 		BLOG ABOUT CARS
 	</div>
-	<div class="w3-center"><a href="#main"><img src="img/Arrow-down.svg" alt="" style="width: 3%; height: 3%;margin-bottom: 3%"></a></div>
+	<div class="w3-center"><a href="#main"><img src="../img/Arrow-down.svg" alt="" style="width: 3%; height: 3%;margin-bottom: 3%"></a></div>
 	<div id="main"></div>
 	<div class="w3-row" style="margin-top: 5%;">
 		<div class="w3-col l1" style="visibility: hidden;">
@@ -38,19 +38,21 @@
 		</div>
 		<div class="w3-col l7 w3-card w3-xxlarge">
 			<div class="header" style="padding-top: 1.5%; padding-left: 2%; font-family: 'Titillium Web',sans-serif;">
-			America, this is your Nissan GT-R Track Edition
+				Behold the 1,360bhp Koenigsegg Agera RS1
 			</div>
 			<hr/>
 			<div class="auto w3-image w3-center">
-				<img src="img/2017_nissan_gt_r_track_edition_05.jpg" alt="" style="width: 75%; height: 50%; margin-bottom: 3%;">
+				<img src="../img/agerars_nyias_2017-2.jpg" alt="" style="width: 75%; height: 50%; margin-bottom: 3%;">
 			</div>
 			<div class="w3-large" style="margin-left: 5%; margin-right: 5%; font-family: 'PT Sans', sans-serif;">
-					<b>At last year’s New York Auto Show, Nissan unveiled the most significant facelift of the R35 to date.</b>
+					<b>We’ll get the bad news out of the way first: this isn’t a Koenigsegg Agera RS that you can actually buy, should you have the necessary financial arrangements or extraneous organs/children/pets you might want to offload.</b>
 					<br/>
-					With more power, new looks and a different interior, 2017’s Godzilla had a little more life injected into it thanks to a softer, more premium outlook. For this year’s New York Auto Show, Nissan has put the harshness back in, keeping the R35 alive even longer. Until an entirely new generation GT-R arrives… at some point in the future.
-					<a href="https://www.topgear.com/car-news/new-york-motor-show/america-your-nissan-gt-r-track-edition" style="color: white">_</a>
+				 	Because they all sold out over a year ago. 
+					But the good news is that it’s one of the most powerful Koenigsegg Agera RSs ever built. It is called the Koenigsegg Agera RS1, and it has premiered at the New York Auto Show. That’s on now.
+					Cast your mind back to March 2015, and Christian von Koenigsegg announced that 25 Koenigsegg Agera RS cars would be built. Largely because the technology involved in developing the hugely sticky, fast and track-friendly One:1 was just too good to restrict to seven models.
+					<a href="https://www.topgear.com/car-news/new-york-motor-show/behold-1360bhp-koenigsegg-agera-rs1" style="color: white">_</a>
 					<br/>
-					<div class="w3-btn w3-right" style="font-family: 'Titillium Web', sans-serif; margin-bottom: 1%;"><a href="nissan-gtr/index.html">Read more <i class="fa fa-arrow-right" aria-hidden="true"></i></a></div>
+					<div class="w3-btn w3-right" style="font-family: 'Titillium Web', sans-serif; margin-bottom: 1%;">Read more <i class="fa fa-arrow-right" aria-hidden="true"></i></div>
 				</div>
 			</div>
 			<div class="w3-col" style="visibility: hidden; width: 3%">
@@ -80,45 +82,19 @@
 			</div>
 			<div class="w3-col l7 w3-card w3-xxlarge">
 				<div class="header" style="padding-top: 1.5%; padding-left: 2%; font-family: 'Titillium Web', sans-serif;">
-					This special edition Corvette has much carbon
+					Got £236k? Buy the rarest Aston Martin on sale
 				</div>
 				<hr/>
 				<div class="auto w3-image w3-center">
-					<img src="img/corvette_2017.jpg" alt="" style="width: 75%; height: 50%; margin-bottom: 3%;">
+					<img src="../img/lead.jpg" alt="" style="width: 75%; height: 50%; margin-bottom: 3%;">
 				</div>
 				<div class="w3-large" style="margin-left: 5%; margin-right: 5%; font-family: 'PT Sans', sans-serif;">
-					<b>It's 65 years of the Corvette. 65 years old you say?</b>
+					<b>Want an Aston Martin Valkyrie, but with up to 150 being made, fear it won’t be rare enough?</b>
 					<br/>
-					Yep. The Corvette is 65 years old, which means it’s about time Chevrolet gave us another special edition. So it’s called the Corvette Carbon 65, erm, Edition, and as its name would have you believe, it does indeed feature much carbon.
-					The “ground effects” are the most obvious bits – the spoiler, diffuser, side skirts and so-on. The $15,000 option package, which comes out this summer and can be specified on Grandsports and Z06s, also features a carbon roof (on Coupes), carbon steering-wheel and gloss carbon interior trim.
-					Non-carbon additions include special seats, special graphics, “Ceramic Matrix Gray” (or “grey”, if you’re a Brit and therefore spell things correctly) paintwork and blue brake calipers. No performance enhancements, but take it from us – the Z06 especially is fast enough as it is.
-					But what about its predecessors? Have a flick through our little gallery for a quick, Corvette-based history lesson…
-					<a href="https://www.topgear.com/car-news/new-york-motor-show/special-edition-corvette-has-much-carbon#1" style="color: white">_</a>
-					<br/>
-					<div class="w3-btn w3-right" style="font-family: 'Titillium Web', sans-serif; margin-bottom: 1%;"><a href="corvette-history/index.html">Read more <i class="fa fa-arrow-right" aria-hidden="true"></i></a></div>
-				</div>
-			</div>
-	</div>
-		<div class="w3-row" style="margin-top: 1%;">
-			<div class="w3-col l1" style="visibility: hidden;">
-				_
-			</div>
-			<div class="w3-col l7 w3-card w3-xxlarge">
-				<div class="header" style="padding-top: 1.5%; padding-left: 2%; font-family: 'Titillium Web', sans-serif;">
-					Hold onto your trendy hats, more Audi Q SUVs are coming
-				</div>
-				<hr/>
-				<div class="auto w3-image w3-center">
-					<img src="img/q8_sport_concept_3.jpg" alt="" style="width: 75%; height: 50%; margin-bottom: 3%;">
-				</div>
-				<div class="w3-large" style="margin-left: 5%; margin-right: 5%; font-family: 'PT Sans', sans-serif;">
-					<b>We joke often of Audi’s ability to fill a niche.</b>
-					<br/>
-					Or, indeed, create a new one all of its own.
-					Well, its spotted some numbers yet to be prefixed by a Q and, well, prefixed away. So there’ll be a large Q8 SUV next year, and a smaller Q4 in 2019.
-					We’ve long suspected both will exist, mind, and the Q8 has been previewed recently by this very fetching concept car (pictured above). Yep, the slightly safe Audi styling of old is being binned for something far bolder. Hurrah!
-					Described as a “premium SUV in a coupe style”, the Q8 will roll off the same Bratislava production line as the really quite good SQ7. We suspect an SQ8 might be a guilty pleasure of the highest order.
-					<a href="https://www.topgear.com/car-news/hold-your-trendy-hats-more-audi-q-suvs-are-coming" style="color: white">_</a>
+					Well, look this way. There is no Aston as rare as the Vanquish you see here.
+					To the naked human eye it probably looks like ‘just’ a Vanquish Volante. ‘Just’, naturally, is not the perfect word for describing a V12 convertible with something approaching 600bhp. But in the context of modern hypercars, you know what we mean.
+					This, though, is an AM37 Vanquish Volante. It is a one-of-one limited edition – see, told you Astons get no scarcer – and it’s the work of the company’s Q bespoke department. It was created to help launch the AM37 powerboat.
+					<a href="https://www.topgear.com/car-news/supercars/got-ps236k-buy-rarest-aston-martin-sale" style="color: white">_</a>
 					<br/>
 					<div class="w3-btn w3-right" style="font-family: 'Titillium Web', sans-serif; margin-bottom: 1%;">Read more <i class="fa fa-arrow-right" aria-hidden="true"></i></div>
 				</div>
@@ -130,18 +106,42 @@
 			</div>
 			<div class="w3-col l7 w3-card w3-xxlarge">
 				<div class="header" style="padding-top: 1.5%; padding-left: 2%; font-family: 'Titillium Web', sans-serif;">
-					This mad Alfa Romeo concept is the supercar we need right now
+					These are the world’s best police cars
 				</div>
 				<hr/>
 				<div class="auto w3-image w3-center">
-					<img src="img/1_1_1.jpg" alt="" style="width: 75%; height: 50%; margin-bottom: 3%;">
+					<img src="../img/468157.jpg" alt="" style="width: 75%; height: 50%; margin-bottom: 3%;">
 				</div>
 				<div class="w3-large" style="margin-left: 5%; margin-right: 5%; font-family: 'PT Sans', sans-serif;">
-					<b>We should probably preface this story with the fact that none of the images you are about to see are real, official, or in any way legitimate.</b>
+					<b>Italian State Police get a second Huracán for police duties. It joins an excellent list.</b>
 					<br/>
-					They are however, images. Images of an idea held by TG’s good friend Alex Imnadze; a chap who’s a dab hand at rendering quite wonderful cars using witchcraft levels of Photoshoppery.
-					Today’s not-real sketch comes via Touring Superleggera’s quite wonderful Disco Volante, and Alfa Romeo’s very own 6C. Using both of these lovely automobiles as inspiration, Alex has put himself in the mind of an Alfa Romeo designer, were said designer be tasked with sketching out a mad, exquisite Alfa Romeo supercar.
-					<a href="https://www.topgear.com/car-news/supercars/mad-alfa-romeo-concept-supercar-we-need-right-now#1" style="color: white">_</a>
+					Italian State Police Lamborghini Huracan
+					If you’re an Italian traffic cop, today is a very good day, for Lamborghini has just donated a second Huracan to the country’s Highway Patrol. Like the first, it will be used for “normal police operations”, as well as the urgent transport of blood and organs. Naturally, it isn’t entirely standard. There’s the same 610bhp N/A V10 and all-wheel drive system, sure, and all the normal stuff you’ll find in any regular police car. Lights, sirens, radios, a video camera and gun rack - it’s all there. The tyres even have special blue sidewalls to match the ‘Police Medium Blue’ bodywork. 
+					It is very cool, certainly, but the Italians aren’t the only ones with flash police cars. Have a flick through the gallery for some of our faves…
+					<a href="https://www.topgear.com/car-news/supercars/meet-the-worlds-very-best-and-coolest-police-cars#1" style="color: white">_</a>
+					<br/>
+					<div class="w3-btn w3-right" style="font-family: 'Titillium Web', sans-serif; margin-bottom: 1%;">Read more <i class="fa fa-arrow-right" aria-hidden="true"></i></div>
+				</div>
+			</div>
+	</div>
+		<div class="w3-row" style="margin-top: 1%;">
+			<div class="w3-col l1" style="visibility: hidden;">
+				_
+			</div>
+			<div class="w3-col l7 w3-card w3-xxlarge">
+				<div class="header" style="padding-top: 1.5%; padding-left: 2%; font-family: 'Titillium Web', sans-serif;">
+					Gallery: eight Koenigsegg hypercars in Geneva
+				</div>
+				<hr/>
+				<div class="auto w3-image w3-center">
+					<img src="../img/dsc8577.jpg" alt="" style="width: 75%; height: 50%; margin-bottom: 3%;">
+				</div>
+				<div class="w3-large" style="margin-left: 5%; margin-right: 5%; font-family: 'PT Sans', sans-serif;">
+					<b>Marvel at the sight of much horsepower and expense in Switzerland</b>
+					<br/>
+					The Geneva Motor Show, 2017: certainly no shortage of horsepower, with the likes of the Ferrari 812 Superfast, Porsche 911 GT3 and McLaren 720S. But just outside the Palexpo, Koenigsegg’s customers put on a little horsepower show all of its own. And it was glorious.
+					Yep, some Koenigsegg owners decided to huddle together for an impromptu gathering and parade through Switzerland’s capital to the motor show. There were eight Koenigseggs in attendance (although you will only see seven in most pics as a blue One:1 rocked up late) that included two One:1 models (from only seven ever built), the first Agera RS built for the US market (Agera XS), the recently re-built Agera prototype, the yellow Agera ML (that drove across the alps to get there), the gold-leaf Agera RS Naraya, and two CCXs. 
+					<a href="https://www.topgear.com/car-news/supercars/gallery-eight-koenigsegg-hypercars-geneva#1" style="color: white">_</a>
 					<br/>
 					<div class="w3-btn w3-right" style="font-family: 'Titillium Web', sans-serif; margin-bottom: 1%;">Read more <i class="fa fa-arrow-right" aria-hidden="true"></i></div>
 				</div>
@@ -153,18 +153,18 @@
 		</div>
 		<div class="w3-col l7 w3-card w3-xxlarge">
 			<div class="header" style="padding-top: 1.5%; padding-left: 2%; font-family: 'Titillium Web', sans-serif;">
-				Yikes, someone's tuned a Range Rover Velar already
+				The Bugatti Chiron in numbers
 			</div>
 			<hr/>
 			<div class="auto w3-image w3-center">
-				<img src="img/lumma-range-rover-velar2.jpg" alt="" style="width: 75%; height: 50%; margin-bottom: 3%;">
+				<img src="../img/03_bugatti_chiron_the_quail_web.jpg" alt="" style="width: 75%; height: 50%; margin-bottom: 3%;">
 			</div>
 			<div class="w3-large" style="margin-left: 5%; margin-right: 5%; font-family: 'PT Sans', sans-serif;">
-				<b>It was inevitable, wasn’t it?</b>
-				<br/> 
-				Given the Range Rover has been the darling of car tuners for years, it was only a matter of time before some of them got their overly creative mitts on the new Range Rover Velar.
-				This is the first, and it’s the work of Lumma Design. As its Jaguar F-Pace and Bentley Bentayga prove only too well, Lumma loves an SUV. But only when it’s been given the wheels the size of a covered wagon’s and extended arches that would make a short-wheelbase Audi Quattro blush.
-				And if you thought ‘Range Rover Velar’ was a minor mouthful, then prepare yourself for the Lumma CLR GT Limited Edition. The body kit is best described as ‘strong’, with wildly swelled wheel arches, side sills you can almost step on and an actual carbon rear spoiler. Oh, and a rear diffuser that looks like a grumpy mouth.
+				<b>And power by the score – the new Bugatti’s mind-warping specs, in digital form</b>
+				<br/>
+				On episode four of TG TV s24, you may have spotted Chris Harris behind the wheel of the Bugatti Chiron. 
+				And if, like us, you were awestruck by the vision of Mr Harris powersliding a 1479bhp hypercar, you’re probably replaying the vision in your head right now. Well, if you’re in the UK, you can watch it again, or you could relish in a little game of Top Trumps.
+				Although it really isn’t Top Trumps. As Harris said in his TG telly piece, the Chiron isn’t really a car that you compare to the current holy trinity of hybrid hypercars (the 918, P1 and LaFerrari) so this is more a celebration of numbers – usually the bizarrely large.
 				<a href="https://www.topgear.com/car-news/modified/yikes-someones-tuned-range-rover-velar-already" style="color: white">_</a>
 				<br/>
 				<div class="w3-btn w3-right" style="font-family: 'Titillium Web', sans-serif; margin-bottom: 1%;">Read more <i class="fa fa-arrow-right" aria-hidden="true"></i></div>
@@ -192,9 +192,9 @@
 		<div class="w3-col l7">
 				<div class="w3-bar">
 					<div class="items w3-right">
-						<button class="w3-hover-black w3-black w3-button">1</button>
-				  		<a href="2/index.html" class="w3-button">2</a>
-				  		<a href="3/index.html" class="w3-button">3</a>
+						<a href="index.html" class="w3-button">1</a>
+				  		<a href="index2.html" class="w3-button">2</a>
+				  		<a href="#" class="w3-hover-black w3-black w3-button">3</a>
 					</div>
 				</div>
 		</div>
